fix overlapping perks in layout

--- a/components/Layout/Layout.module.css
+++ b/components/Layout/Layout.module.css
@@ -88,96 +88,51 @@
 }
 
 @keyframes w1anim {
-  0%{
-    opacity: 0;
-  }
-  10%{
-    opacity: 1;
-  }
-  20% {
-    opacity:0;
-  }
+  0%   { opacity: 0; }
+  4.16%   { opacity: 1; }
+  8.33% { opacity: 0; }
 }
- 
+
 @keyframes w2anim {
-  20%{
-    opacity: 0;
-  }
-  30%{
-    opacity: 1;
-  }
-  40% {
-    opacity:0;
-  }
+  12.5%   { opacity: 0; }
+  16.66%  { opacity: 1; }
+  20.83%  { opacity: 0; }
 }
- 
+
 @keyframes w3anim {
-  40%{
-    opacity: 0;
-  }
-  50%{
-    opacity: 1;
-  }
-  60% {
-    opacity:0;
-  }
+  25%     { opacity: 0; }
+  29.16%  { opacity: 1; }
+  33.33%  { opacity: 0; }
 }
- 
+
 @keyframes w4anim {
-  60%{
-    opacity: 0;
-  }
-  70%{
-    opacity: 1;
-  }
-  80% {
-    opacity:0;
-  }
+  37.5%   { opacity: 0; }
+  41.66%  { opacity: 1; }
+  45.83%  { opacity: 0; }
 }
- 
+
 @keyframes w5anim {
-  80%{
-    opacity: 0;
-  }
-  90%{
-    opacity: 1;
-  }
-  100% {
-    opacity:0;
-  }
+  50%     { opacity: 0; }
+  54.16%  { opacity: 1; }
+  58.33%  { opacity: 0; }
 }
+
 @keyframes w6anim {
-  80%{
-    opacity: 0;
-  }
-  90%{
-    opacity: 1;
-  }
-  100% {
-    opacity:0;
-  }
+  62.5%   { opacity: 0; }
+  66.66%  { opacity: 1; }
+  70.83%  { opacity: 0; }
 }
+
 @keyframes w7anim {
-  80%{
-    opacity: 0;
-  }
-  90%{
-    opacity: 1;
-  }
-  100% {
-    opacity:0;
-  }
+  75%     { opacity: 0; }
+  79.16%  { opacity: 1; }
+  83.33%  { opacity: 0; }
 }
+
 @keyframes w8anim {
-  80%{
-    opacity: 0;
-  }
-  90%{
-    opacity: 1;
-  }
-  100% {
-    opacity:0;
-  }
+  87.5%   { opacity: 0; }
+  91.66%  { opacity: 1; }
+  95.83%  { opacity: 0; }
 }
 .w1 {
   -webkit-animation: w1anim 14s infinite;
@@ -204,16 +159,16 @@
           animation: w5anim 14s infinite;
 }
 .w6 {
-  -webkit-animation: w5anim 14s infinite;
-          animation: w5anim 14s infinite;
+  -webkit-animation: w6anim 14s infinite;
+          animation: w6anim 14s infinite;
 }
 .w7 {
-  -webkit-animation: w5anim 14s infinite;
-          animation: w5anim 14s infinite;
+  -webkit-animation: w7anim 14s infinite;
+          animation: w7anim 14s infinite;
 }
 .w8 {
-  -webkit-animation: w5anim 14s infinite;
-          animation: w5anim 14s infinite;
+  -webkit-animation: w8anim 14s infinite;
+          animation: w8anim 14s infinite;
 }
 
 @media (max-width: 1200px) {
